@@ -37,6 +37,7 @@ use constant {
     DEBUG_CACHE                 => $ENV{DEBUG_TESLA_API_CACHE},
     API_CACHE_PERSIST           => 0,
     API_CACHE_TIMEOUT_SECONDS   => 2,
+    API_TIMEOUT_RETRIES         => 3,
     CACHE_FILE                  => "$home_dir/tesla_api_cache.json",
     ENDPOINTS_FILE              => dist_file('Tesla-API', 'endpoints.json'),
     OPTION_CODES_FILE           => dist_file('Tesla-API', 'option_codes.json'),
@@ -123,22 +124,30 @@ sub api {
 
     my $request = HTTP::Request->new($type, $url, $header, encode_json($api_params));
 
-    my $response = $self->mech->request($request);
+    my $response;
 
-    if ($response->is_success) {
-        my $response_data = _decode($response->decoded_content)->{response};
+    for (1 .. API_TIMEOUT_RETRIES) {
+        # If a timeout (ie. code 500) occurs, repeat the API call
 
-        $self->_cache(
-            endpoint => $endpoint_name,
-            id       => $id,
-            data     => $response_data
-        );
+        $response = $self->mech->request($request);
 
-        return $response_data;
+        if ($response->is_success) {
+            my $response_data = _decode($response->decoded_content)->{response};
+
+            $self->_cache(
+                endpoint => $endpoint_name,
+                id       => $id,
+                data     => $response_data
+            );
+
+            return $response_data;
+        }
+        elsif ($response->code == 500){
+            next;
+        }
     }
-    else {
-        warn $response->status_line;
-    }
+
+    return {};
 }
 sub api_cache_clear {
     my ($self) = @_;
