@@ -4,6 +4,8 @@ Revision history for Tesla-API
     - Remove erroneous call example from Tesla::Vehicle from the SYNOPSIS
     - Added prereq of LWP::Protocol::https
     - Remove WWW::Mechanize timeout (it defaults to 180 secs in LWP::UserAgent)
+    - Add API_TIMEOUT_RETRIES; If a Tesla API call times out, try it again this
+      many times
 
 0.09    2022-03-22
     - In CI script, manually install File::ShareDir::Install, as it doesn't get
